# open_spiel

./: .gitignore
open_spiel/: CMakeLists.txt
open_spiel/games/: CMakeLists.txt  ludii_game.cc  ludii_game.h  ludii_game_test.cc
open_spiel/games/ludii/: CMakeLists.txt  README.md  jni_utils.cc  jni_utils.h
open_spiel/scripts/: global_variables.sh  install.sh
